[gd_scene load_steps=9 format=2]

[ext_resource path="res://food/vegetals/flowers/pearl_flower/sprites/pearl_flower_closed.png" type="Texture" id=1]
[ext_resource path="res://food/vegetals/flowers/pearl_flower/sprites/pearl_flower_open.png" type="Texture" id=2]
[ext_resource path="res://food/vegetals/flowers/pearl_flower/pearl_flower.gd" type="Script" id=3]
[ext_resource path="res://food/vegetals/flowers/pearl_flower/sprites/pearl_flower_open_thirsty.png" type="Texture" id=4]
[ext_resource path="res://food/vegetals/flowers/pearl_flower/sprites/pearl_flower_closed_thirsty.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "open",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "closed_thirsty",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "open_thirsty",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 34.9939

[node name="pearl_flower" type="StaticBody2D"]
collision_layer = 12
collision_mask = 12
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 12
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="flower_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -71 )
frames = SubResource( 2 )
animation = "closed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="pearl_generation" type="Timer" parent="."]
wait_time = 60.0

[node name="pearl_button" type="TextureButton" parent="."]
margin_left = -30.0
margin_top = -103.0
margin_right = 32.0
margin_bottom = -41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Timer" parent="."]
wait_time = 60.0
autostart = true
[connection signal="timeout" from="pearl_generation" to="." method="_on_pearl_generation_timeout"]
[connection signal="pressed" from="pearl_button" to="." method="_on_pearl_button_pressed"]
[connection signal="timeout" from="health" to="." method="_on_health_timeout"]
